2004-06-07  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Close the dialogue when the WM close button is pressed.  Patch
	from Mariano Suárez-Alvarez, closing #143780.

2004-06-01  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" Bulgarian

2004-06-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.5.13.

2004-06-01  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Watch the Strip Characters and Eject preferences for changes.

2004-05-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Mark Eject for localisation. Thanks to Stephane Raimbault for
	noticing.

2004-05-14  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Add %tN-%tA-%tT to file_patterns (closes: #142207)

2004-05-08  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

2004-05-07  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (device_changed_cb):
	* src/sj-prefs.c: (prefs_get_default_device), (cd_drive_exists):
	* src/sj-prefs.h: use existing CD drive if we can't find the one
	specified in GConf (Closes: #130609)

2004-05-07  Bastien Nocera  <hadess@hadess.net>

	* src/sj-util.c: (mkdir_recursive): better error message when ripping
	on a full disk (Closes: #140403)

2004-05-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.5.12.

2004-04-30  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add " to the list of characters to strip for sane paths.
	Fix a crash when the user skips writing every track if they already exist.

2004-04-16  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Wire up the Help button. Thanks to Brent Fox for the patch.

2004-04-16  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Handle the new GStreamer 0.8 error callback prototype.

2004-04-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Don't bother building with GStreamer 0.7.x, and set a define