@@ -1,6 +1,12 @@
 2004-06-07  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
+	Force the sample track/album strings to be translated. Another
+	patch from Mariano, closing #136479.
+	
+2004-06-07  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-prefs.c:
 	Close the dialogue when the WM close button is pressed.  Patch
 	from Mariano Suárez-Alvarez, closing #143780.
 
